fix alignment cols

--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,4 +1,11 @@
 .delete-btn {
   float: right;
   color: #e74944;
+  width: 25px;
+}
+
+.saved-btn {
+  float: right;
+  color: green;
+  width: 25px;
 }
